--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -638,23 +638,10 @@
 }
 
 @InProceedings{cloudvisor:zhang,
-  Title                    = {{CloudVisor: retrofitting protection of virtual machines in multi-tenant cloud with nested virtualization}},
+  Title                    = {{CloudVisor: Retrofitting Protection of Virtual Machines in Multi-Tenant Cloud with Nested Virtualization}},
   Author                   = {Zhang, Fengzhe and Chen, Jin and Chen, Haibo and Zang, Binyu},
-  Booktitle                = {{Proceedings of the Twenty-Third ACM Symposium on Operating Systems Principles}},
+  Booktitle                = {{Twenty-Third ACM Symposium on Operating Systems Principles (SOSP)}},
   Year                     = {2011},
-
-  Address                  = {New York, NY, USA},
-  Pages                    = {203--216},
-  Publisher                = {ACM},
-  Series                   = {{SOSP '11}},
-
-  Acmid                    = {2043576},
-  Doi                      = {10.1145/2043556.2043576},
-  ISBN                     = {978-1-4503-0977-6},
-  Keywords                 = {multi-tenant cloud; nested virtualization; virtual machine security},
-  Location                 = {Cascais, Portugal},
-  Numpages                 = {14},
-  Url                      = {http://doi.acm.org/10.1145/2043556.2043576}
 }
 
 @Article{dbt:wiki,
