--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -213,6 +213,20 @@
   Year                     = {2009}
 }
 
+@inproceedings{nova,
+ author = {Steinberg, Udo and Kauer, Bernhard},
+ title = {{NOVA: A Microhypervisor Based Secure Virtualization Architecture}},
+ booktitle = {{ACM European Conference on Computer Systems (EUROSYS)}},
+ year = {2010},
+}
+
+@inproceedings{NoHype,
+ author = {Jakub Szefer and Eric Keller and Ruby B. Lee and Jennifer Rexford},
+ title = {{Eliminating the Hypervisor Attack Surface for a More Secure Cloud}},
+ booktitle = {{ACM Conference on Computer and Communications Security (CCS)}},
+ year = {2011},
+}
+
 @Article{Bugnion:2012:BVX:2382553.2382554,
   Title                    = {{Bringing Virtualization to the x86 Architecture with the Original VMware Workstation}},
   Author                   = {Bugnion, Edouard and Devine, Scott and Rosenblum, Mendel and Sugerman, Jeremy and Wang, Edward Y.},
@@ -514,26 +528,6 @@
   Keywords                 = {Me:MastersThesis VM},
   Url                      = {http://portal.acm.org/citation.cfm?id=1204009&coll=GUIDE&dl=GUIDE&CFID=36297498&CFTOKEN=48195634; http://www.bibsonomy.org/bibtex/2f62d5ccf414d0f5e75d32e33251a9ca8/gron},
   X-fetchedfrom            = {Bibsonomy}
-}
-
-@InProceedings{nova,
-  Title                    = {{NOVA: a microhypervisor-based secure virtualization architecture}},
-  Author                   = {Steinberg, Udo and Kauer, Bernhard},
-  Booktitle                = {{Proceedings of the 5th European conference on Computer systems}},
-  Year                     = {2010},
-
-  Address                  = {New York, NY, USA},
-  Pages                    = {209--222},
-  Publisher                = {ACM},
-  Series                   = {{EuroSys '10}},
-
-  Acmid                    = {1755935},
-  Doi                      = {10.1145/1755913.1755935},
-  ISBN                     = {978-1-60558-577-2},
-  Keywords                 = {architecture; virtualization},
-  Location                 = {Paris, France},
-  Numpages                 = {14},
-  Url                      = {http://doi.acm.org/10.1145/1755913.1755935}
 }
 
 @Article{xen:thibault,
